Add the value of the constant name to the implicit object in the pattern

For objects which has been changed the object type to FcTypeRange.

https://bugs.freedesktop.org/show_bug.cgi?id=105415